--- a/emprego/desemprego_config.json
+++ b/emprego/desemprego_config.json
@@ -5,13 +5,13 @@
         "num_font": {"name": "Calibri", "size": 12},
         "date_axis": true,
         "major_unit": 3,
-        "major_unit_type": "months",
+        "major_unit_type": "months"
     },
     "y_axis": {
         "num_font": {"name": "Calibri", "size": 12},
         "min": 0,
         "max": 16,
         "major_unit": 2,
-        "major_gridlines": {"visible": false},
+        "major_gridlines": {"visible": false}
     }
 }
