--- a/config/treasury.json
+++ b/config/treasury.json
@@ -1,5 +1,5 @@
 {
-    "file_path": "../files/",
+    "file_path": "files/",
     "series_start": "2018-12-01",
     "x_axis": {
         "num_font": {"name": "Calibri", "size": 12},
